# codex-test

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
site/: index.html
site/projects/: index.html
site/resume/: index.html
site/static/: style.css
src/codex_test/: cli.py
tests/: test_cli.py
