[project]
name = "codex-test"
version = "0.1.0"
description = "Minimal Python project scaffold"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = ["rich>=13.0"]

[project.optional-dependencies]
dev = ["pytest>=9.0.0"]

[project.scripts]
codex-test = "codex_test.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
